[tool.poetry]
name = "pyenv-etheridev"
version = "0.1.0"
description = "My boilerplate"
authors = ["William Etheridge <wbetheri@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
pytest = "^7.1.2"
isort = "^5.10.1"
python-dotenv = "^0.20.0"
pytest-cov = "^3.0.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
